populate other pages

--- a/index.html
+++ b/index.html
@@ -166,5 +166,9 @@
     <footer class="text-center py-4 mt-5 bg-light">
       <p class="mb-0">&copy; 2025 Delaware Division of Libraries</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
