--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="rsc/css/style.css" />
     <style>
       :root {
-        --primary-color: #4CAF50;
+        --primary-color: rgb(147, 177, 69);
         --border-style: 2px solid #333;
         --box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       }
@@ -53,25 +53,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/sustainablefutures25/home">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="/sustainablefutures25/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#partners">Partners</a>
+            <a class="nav-link" href="/sustainablefutures25/partners">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#events">Events</a>
+            <a class="nav-link" href="/sustainablefutures25/home#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="/sustainablefutures25/contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid text-center py-2 d-flex align-items-center justify-content-center" style="background-color: #4CAF50; color: white; margin-bottom: 1rem; min-height: 150px; box-shadow: 0 6px 12px rgba(0,0,0,0.2);">
+    <div class="jumbotron jumbotron-fluid text-center py-2 d-flex align-items-center justify-content-center" style="background-color: rgb(147, 177, 69); color: white; margin-bottom: 1rem; min-height: 150px; box-shadow: 0 6px 12px rgba(0,0,0,0.2);">
       <div>
         <h1 class="h2" style="text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;"><b>About the Sustainable Futures Resource Fair</b></h1>
       </div>
@@ -96,10 +96,6 @@
     </div>
 
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
 
