--- a/partners.html
+++ b/partners.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="rsc/css/style.css" />
     <style>
       :root {
-        --primary-color: #4CAF50;
+        --primary-color: rgb(147, 177, 69);
         --border-style: 2px solid #333;
         --box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       }
@@ -73,25 +73,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/sustainablefutures25/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="/sustainablefutures25/about">About</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/sustainablefutures25/partners">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#partners">Partners</a>
+            <a class="nav-link" href="/sustainablefutures25/home#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#events">Events</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="/sustainablefutures25/contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid text-center py-2 d-flex align-items-center justify-content-center" style="background-color: #4CAF50; color: white; margin-bottom: 1rem; min-height: 150px; box-shadow: 0 6px 12px rgba(0,0,0,0.2);">
+    <div class="jumbotron jumbotron-fluid text-center py-2 d-flex align-items-center justify-content-center" style="background-color: rgb(147, 177, 69); color: white; margin-bottom: 1rem; min-height: 150px; box-shadow: 0 6px 12px rgba(0,0,0,0.2);">
       <div>
         <h1 class="h2" style="text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;"><b>Our Partners</b></h1>
         <p style="font-style: italic; text-shadow: 2px 2px 4px #000;">We are grateful for the support of the following organizations and individuals who have made this event possible.</p>
@@ -147,12 +147,10 @@
           <img src="assets/partners/west-end.png" alt="West End Neighborhood House" class="partner-logo" style="max-width: 100%; max-height: 100%; object-fit: contain; margin: auto;">
         </a> -->
 
-    <footer class="text-center py-4 mt-5 bg-light">
+      </div>
+    </div>
+    <footer class="text-center py-4 mt-5 bg-light w-100">
       <p class="mb-0">&copy; 2025 Delaware Division of Libraries</p>
     </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
