--- a/about.html
+++ b/about.html
@@ -3,16 +3,24 @@
   <head>
     <title>About - 2025 Sustainable Futures Resource Fair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="rsc/css/style.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
       :root {
         --primary-color: rgb(147, 177, 69);
         --border-style: 2px solid #333;
         --box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        --font-primary: 'Roboto', sans-serif;
+        --font-secondary: 'Open Sans', sans-serif;
+        font-size: 18px;
+      }
+      
+      body {
+        font-size: 1rem;
+        line-height: 1.6;
       }
       
       .section-container {
@@ -94,8 +102,11 @@
         </ul>
       </div>
     </div>
+  </div>
 
-    </div>
-  </body>
+  <footer class="text-center py-4 mt-5 bg-light">
+    <p class="mb-0">&copy; 2025 Delaware Division of Libraries</p>
+  </footer>
+</body>
 </html>
 
