added new partners

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.deuffc.org/">Delaware Urban Farm and Food Coalition</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.facebook.com/DelawareResilienceHub/">Delaware's First Resilience Hub</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://plasticfreedelaware.org/">Plastic Free Delaware / Zero Waste First State</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.nemours.org">Nemours Children's Health</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.newcastlede.gov/1389/Route-9-Library-Innovation-Center">Route 9 Library & Innovation Center</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.sierraclub.org/delaware">Sierra Club Delaware Chapter</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.udel.edu/academics/colleges/canr/cooperative-extension/">University of Delaware - Cooperative Extension</a></li>
