added JS to page for countdown

--- a/contact.html
+++ b/contact.html
@@ -135,5 +135,6 @@
     <footer class="text-center py-4 mt-5 bg-light">
       <p class="mb-0">&copy; 2025 Delaware Division of Libraries</p>
     </footer>
+    <script src="rsc/js/main.js"></script>
   </body>
 </html>
