--- a/about.html
+++ b/about.html
@@ -52,19 +52,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="partners.html">Partners</a>
+            <a class="nav-link" href="/partners">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#events">Events</a>
+            <a class="nav-link" href="/#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
       </div>
