--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="partners.html">Partners</a>
+            <a class="nav-link" href="#partners">Partners</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
 
     <div class="alert alert-warning text-center" role="alert">
-      This page is currently in development. Event details are subject to change.
+      This page is currently in development. Content is subject to change.
     </div>
-    
+
     <div class="jumbotron jumbotron-fluid text-center py-5 d-flex align-items-center justify-content-center" style="background-color: rgb(147, 177, 69); color: white; margin-bottom: 1rem; min-height: 400px;">
       <div class="container">
         <h1 class="display-4 fw-bold mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">2025 Sustainable Futures Resource Fair</h1>
