--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/home" onclick="window.location.href='/home'; return false;">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link" href="/about" onclick="window.location.href='/about'; return false;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/partners">Partners</a>
+            <a class="nav-link" href="/partners" onclick="window.location.href='/partners'; return false;">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/#events">Events</a>
+            <a class="nav-link" href="/events" onclick="window.location.href='/events'; return false;">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link" href="/contact" onclick="window.location.href='/contact'; return false;">Contact</a>
           </li>
         </ul>
       </div>
