--- a/index.html
+++ b/index.html
@@ -96,33 +96,25 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/home" onclick="window.location.href='/home'; return false;">Home</a>
+            <a class="nav-link" href="index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about" onclick="window.location.href='/about'; return false;">About</a>
+            <a class="nav-link" href="about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/partners" onclick="window.location.href='/partners'; return false;">Partners</a>
+            <a class="nav-link" href="partners">Partners</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/events" onclick="window.location.href='/events'; return false;">Events</a>
+            <a class="nav-link" href="events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact" onclick="window.location.href='/contact'; return false;">Contact</a>
+            <a class="nav-link" href="contact">Contact</a>
           </li>
         </ul>
       </div>
