--- a/index.html
+++ b/index.html
@@ -168,26 +168,29 @@
             <ul class="list-unstyled partner-list">
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://heart.org/delaware">American Heart Association</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://cleanair.org/">Clean Air Council</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delmarva.com/">Delmarva Power</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.thedch.org/">Delaware Center for Horticulture</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.dhss.delaware.gov/dph/">Delaware Department of Public Health (DPH)</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://dema.delaware.gov/">Delaware Emergency Management Agency (DEMA)</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.dhss.delaware.gov/dhss/dph/dpc/diabetes.html">Delaware Health and Social Services (DHSS) - Diabetes and Heart Disease Prevention and Control</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.udel.edu/academics/colleges/canr/cooperative-extension/environmental-stewardship/master-naturalist/">Delaware Master Naturalists</a></li>
-              <!-- <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delawarenaturesociety.org/">Delaware Nature Society</a></li> -->
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delawarenaturesociety.org/">Delaware Nature Society</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://quitnow.net/delaware?qnclient=delaware">Delaware Quitline</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.deuffc.org/">Delaware Urban Farm and Food Coalition</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.facebook.com/DelawareResilienceHub/">Delaware's First Resilience Hub</a></li>
-              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://plasticfreedelaware.org/">Plastic Free Delaware / Zero Waste First State</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.energizedelaware.org/">Energize Delaware</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.nemours.org">Nemours Children's Health</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://plasticfreedelaware.org/">Plastic Free Delaware / Zero Waste First State</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.newcastlede.gov/1389/Route-9-Library-Innovation-Center">Route 9 Library & Innovation Center</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.sierraclub.org/delaware">Sierra Club Delaware Chapter</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.udel.edu/academics/colleges/canr/cooperative-extension/">University of Delaware - Cooperative Extension</a></li>
-              <!-- <li style="padding: 8px 0;"><a href="https://westendnh.org/">West End Neighborhood House</a></li> -->
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://westsidehealth.org/">Westside Family Healthcare</a></li>
             </ul>
           </section>
         </div>
         <div class="col-md-9 ">
           <a href="https://forms.office.com/r/LnbMdHw0cC">  
-            <img src="https://d2jv02qf7xgjwx.cloudfront.net/accounts/402099/images/slide.png" class="img-fluid w-100 event-image mb-4" alt="Sustainable Futures Resource Fair promotional image showing event details: March 8, 2025 from 11am-2pm at Route 9 Library. The fair will cover topics such as air quality, sustainable food systems, and healthy living. The image includes a call to action for organizations to become partners in the event, with the email address 'vista.health@lib.de.us' listed as a contact.">
+            <img src="/rsc/img/SF25Flyer.png" class="img-fluid w-100 event-image mb-4" alt="Sustainable Futures Resource Fair promotional image showing event details: March 8, 2025 from 11am-2pm at Route 9 Library. The fair will cover topics such as air quality, sustainable food systems, and healthy living. The image includes a call to action for organizations to become partners in the event, with the email address 'vista.health@lib.de.us' listed as a contact.">
           </a>
           <div class="mt-3 section-container">
             <div class="row align-items-center">
