updated partner list

--- a/index.html
+++ b/index.html
@@ -167,17 +167,18 @@
             <h2 class="text-center mb-4">Partners</h2>
             <ul class="list-unstyled partner-list">
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://heart.org/delaware">American Heart Association</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.redcross.org">American Red Cross</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://cleanair.org/">Clean Air Council</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://dema.delaware.gov/">Delaware Emergency Management Agency (DEMA)</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.dhss.delaware.gov/dph/">Delaware Department of Public Health (DPH)</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delmarva.com/">Delmarva Power</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.thedch.org/">Delaware Center for Horticulture</a></li>
-              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.dhss.delaware.gov/dph/">Delaware Department of Public Health (DPH)</a></li>
-              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://dema.delaware.gov/">Delaware Emergency Management Agency (DEMA)</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.dhss.delaware.gov/dhss/dph/dpc/diabetes.html">Delaware Health and Social Services (DHSS) - Diabetes and Heart Disease Prevention and Control</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.udel.edu/academics/colleges/canr/cooperative-extension/environmental-stewardship/master-naturalist/">Delaware Master Naturalists</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delawarenaturesociety.org/">Delaware Nature Society</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://quitnow.net/delaware?qnclient=delaware">Delaware Quitline</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.deuffc.org/">Delaware Urban Farm and Food Coalition</a></li>
-              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.facebook.com/DelawareResilienceHub/">Delaware's First Resilience Hub</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.delmarva.com/">Delmarva Power</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.energizedelaware.org/">Energize Delaware</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.nemours.org">Nemours Children's Health</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://plasticfreedelaware.org/">Plastic Free Delaware / Zero Waste First State</a></li>
@@ -185,6 +186,8 @@
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.sierraclub.org/delaware">Sierra Club Delaware Chapter</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.udel.edu/academics/colleges/canr/cooperative-extension/">University of Delaware - Cooperative Extension</a></li>
               <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://westsidehealth.org/">Westside Family Healthcare</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://offshorewinddelaware.org/">People for Offshore Wind Energy Resources</a></li>
+              <li style="padding: 8px 0; border-bottom: 1px solid #e0e0e0;"><a href="https://www.plasticfreedelaware.org/">Plastic Free Delaware</a></li>
             </ul>
           </section>
         </div>
