--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="rsc/css/style.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <meta name="description" content="Join us for the 2025 Sustainable Futures Resource Fair at Route 9 Library. Learn about environmental health, sustainable living, and connect with local organizations.">
+    <meta name="keywords" content="sustainable futures, delaware, resource fair, environmental health, sustainability, Route 9 Library">
+    <meta property="og:title" content="2025 Sustainable Futures Resource Fair">
+    <meta property="og:description" content="Join us for the 2025 Sustainable Futures Resource Fair at Route 9 Library.">
+    <meta property="og:image" content="/rsc/img/logo.png">
     <style>
       :root {
         --primary-color: rgb(147, 177, 69);
