--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
   <head>
     <title>About - 2025 Sustainable Futures Resource Fair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Learn about the 2025 Sustainable Futures Resource Fair's mission to connect Delaware residents with environmental and health resources through local organizations and experts.">
+    <meta name="keywords" content="sustainable futures, delaware, resource fair, environmental health, sustainability, Route 9 Library, about">
+    <meta property="og:title" content="About - 2025 Sustainable Futures Resource Fair">
+    <meta property="og:description" content="Learn about the 2025 Sustainable Futures Resource Fair's mission to connect Delaware residents with environmental and health resources.">
+    <meta property="og:image" content="/rsc/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="rsc/css/style.css" />
