--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
   <head>
     <title>Contact - 2025 Sustainable Futures Resource Fair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Get in touch with the organizers of the 2025 Sustainable Futures Resource Fair. Connect with our AmeriCorps VISTA coordinators and learn about partnership opportunities.">
+    <meta name="keywords" content="sustainable futures, delaware, resource fair, contact, partnership, Route 9 Library, AmeriCorps VISTA">
+    <meta property="og:title" content="Contact - 2025 Sustainable Futures Resource Fair">
+    <meta property="og:description" content="Get in touch with the organizers of the 2025 Sustainable Futures Resource Fair and learn about partnership opportunities.">
+    <meta property="og:image" content="/rsc/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="rsc/css/style.css" />
