--- a/partners.html
+++ b/partners.html
@@ -3,6 +3,11 @@
   <head>
     <title>Partners - 2025 Sustainable Futures Resource Fair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Meet our partners for the 2025 Sustainable Futures Resource Fair. Discover the organizations and experts working together to promote environmental health and sustainability in Delaware.">
+    <meta name="keywords" content="sustainable futures, delaware, resource fair, partners, organizations, environmental health, sustainability, Route 9 Library">
+    <meta property="og:title" content="Partners - 2025 Sustainable Futures Resource Fair">
+    <meta property="og:description" content="Meet our partners for the 2025 Sustainable Futures Resource Fair. Join leading organizations promoting environmental health in Delaware.">
+    <meta property="og:image" content="/rsc/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="rsc/css/style.css" />
