--- a/partners.html
+++ b/partners.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="sustainable futures, delaware, resource fair, partners, organizations, environmental health, sustainability, Route 9 Library">
     <meta property="og:title" content="Partners - 2025 Sustainable Futures Resource Fair">
     <meta property="og:description" content="Meet our partners for the 2025 Sustainable Futures Resource Fair. Join leading organizations promoting environmental health in Delaware.">
-    <meta property="og:image" content="/rsc/img/logo.png">
+    <meta property="og:image" content="https://github.com/alxdolphin/Sustainable-Futures/blob/204d090129a874819e6eead9a881a5fb607afa3a/rsc/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="rsc/css/style.css" />
@@ -105,19 +105,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index">Home</a>
+              <a class="nav-link" href="/index">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="partners">Partners</a>
+              <a class="nav-link" href="/partners">Partners</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="events">Events</a>
+              <a class="nav-link" href="/events">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact">Contact</a>
+              <a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
         </div>
