relax security preventing css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="2025 Sustainable Futures Resource Fair">
     <meta property="og:description" content="Join us for the 2025 Sustainable Futures Resource Fair at Route 9 Library.">
     <meta property="og:image" content="https://github.com/alxdolphin/Sustainable-Futures/blob/204d090129a874819e6eead9a881a5fb607afa3a/rsc/img/logo.png">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self' https://cdn.jsdelivr.net;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src https://fonts.gstatic.com; img-src 'self' https:; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <script>        
