--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
       
       .jumbotron {
         background-color: var(--primary-color) !important;
-        margin-bottom: 2rem !important;
+        margin-bottom: 1rem !important;
         box-shadow: var(--box-shadow);
+        min-height: 300px;
       }
       
       .jumbotron h1 {
@@ -170,7 +171,7 @@
       This page is currently in development. Content is subject to change.
     </div>
 
-    <div class="jumbotron jumbotron-fluid text-center py-5 d-flex align-items-center justify-content-center" style="background-color: rgb(147, 177, 69); color: white; margin-bottom: 1rem; min-height: 400px;">
+    <div class="jumbotron jumbotron-fluid text-center py-3 d-flex align-items-center justify-content-center" style="background-color: rgb(147, 177, 69); color: white; margin-bottom: 1rem; min-height: 300px;">
       <div class="container">
         <h1 class="display-4 fw-bold mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">2025 Sustainable Futures Resource Fair</h1>
         <h2 class="h2 mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Route 9 Library and Innovation Center</h2>
