overhaul home page

--- a/partners.html
+++ b/partners.html
@@ -131,15 +131,15 @@
     <div class="container">
       <div class="partner-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 10px;">
         <a href="https://www.heart.org/" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
-          <img src="https://www.heart.org/en/-/media/Images/Logos/Global-Do-No-Edit/Header/AHA_Full.svg?h=256&iar=0&mw=1910&w=426&sc_lang=en" alt="American Heart Association" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.6);">
+          <img src="https://www.heart.org/en/-/media/Images/Logos/Global-Do-No-Edit/Header/AHA_Full.svg?h=256&iar=0&mw=1910&w=426&sc_lang=en" alt="American Heart Association" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.4);">
         </a>
         
         <a href="https://www.redcross.org" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
-          <img src="https://www.redcross.org/content/dam/redcross/imported-images/redcross-logo.png.img.png" alt="American Red Cross" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.6);">
+          <img src="https://www.redcross.org/content/dam/redcross/imported-images/redcross-logo.png.img.png" alt="American Red Cross" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.4);">
         </a>
         
         <a href="https://cleanair.org/" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
-          <img src="https://scontent-lga3-2.xx.fbcdn.net/v/t39.30808-1/277148471_339229321578962_6487527125228882724_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=qLS3s0Emc9YQ7kNvgEgsKgo&_nc_zt=24&_nc_ht=scontent-lga3-2.xx&_nc_gid=ALCEMFoDTLP479219eBPQwx&oh=00_AYC4ZStXc8MZ5yBwBq9alWpyj-G-WigCstNncaGnE66n9A&oe=67A7117D" alt="Clean Air Council" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.4);">
+          <img src="https://cdn.greatnonprofits.org/images/logos/CACPantone072HighRes.jpg" alt="Clean Air Council" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(.8);">
         </a>
         <a href="https://dema.delaware.gov/" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKLi8nqj19iXxMKiVin0YC_uXfjdxJ5BKMcw&s" alt="Delaware Emergency Management Agency" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.2);">
