modify google maps widget for proper loading

--- a/index.html
+++ b/index.html
@@ -677,11 +677,10 @@
                       width="100%" 
                       height="200" 
                       class="responsive-map"
-                      style="border:0;"
-                      title="Route 9 Library & Innovation Center Location"
+                      style="border:0;" 
+                      allowfullscreen=""
                       loading="lazy" 
-                      referrerpolicy="no-referrer-when-downgrade"
-                      onload="this.style.opacity=1">
+                      referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                   </div>
                 </div>
