--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="/">Sustainable Futures</a>
+        <a class="navbar-brand" href="index">Sustainable Futures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,7 +73,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid text-center py-4 d-flex align-items-center justify-content-center" style="min-height: 150px;">
+    <div class="jumbotron jumbotron-fluid text-center py-4 d-flex align-items-center justify-content-center">
       <div>
         <h1 class="h2"><b>Past Events Gallery</b></h1>
         <p class="lead" style="font-style: italic;">A look back at our previous Sustainable Futures events.</p>
