--- a/partners.html
+++ b/partners.html
@@ -142,7 +142,7 @@
         </a>
 
         <a href="https://www.facebook.com/DelawareResilienceHub/" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
-          <img src="https://scontent-bos5-1.xx.fbcdn.net/v/t39.30808-1/383389409_122100380456061890_7285381376254288662_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=LLkzI059ohsQ7kNvgH_6VME&_nc_oc=AdmGM0S5DmbhIesfaLLftXYZIJe-IbWLtowPFKcsfZJ_lniuCm0HPPaauqxzwJZumZ4&_nc_zt=24&_nc_ht=scontent-bos5-1.xx&_nc_gid=wV-UCiGavZzSFQX6uvFteg&oh=00_AYEtNLlpi62wz65XvOGP4jhDRwdpwErtoV_e2Ce-z__nFw&oe=67E89589" alt="Delaware Resilience Hub" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.3);">
+          <img src="https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/384566381_10233354274305452_7826952933355917650_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=gt1WDoBuGRwQ7kNvgFvk09z&_nc_oc=AdlPa_R3G224bR-acU1_CShOsAh60DIF4wXsi62MO0RBTHh5jZq9Hau8xbFi_OQDYkr9Ok8Wq_ZXY-EsIEsvQJHt&_nc_zt=23&_nc_ht=scontent-iad3-2.xx&_nc_gid=yjM0JsFMLRj3XCCau-NLEA&oh=00_AYFB7Exl7yqBMtKgu0M_eOPL3oq-CM70DpyFh_ZC9KA4Ng&oe=67F49085" alt="Delaware Resilience Hub" class="partner-logo" style="max-width: 1.05; max-height: 1.05; object-fit: contain; object-position: center; margin: auto; transform: scale(1.3);">
         </a>
 
         <a href="https://www.deuffc.org/" class="partner-card" style="display: flex; align-items: center; justify-content: center; height: 150px;">
